--- a/AnsiblePlaybooks/2.VarSubstitution.yml
+++ b/AnsiblePlaybooks/2.VarSubstitution.yml
@@ -9,7 +9,7 @@
         myHosts: centos
         gather: yes
         pkg: telnet  
-        sudoUser: ansible    
+        sudoUser: centos    
         becomeSudoUser: yes        
     tasks:
     - name: Install telnet server on centos
