--- a/AnsiblePlaybooks/6.debug2.yml
+++ b/AnsiblePlaybooks/6.debug2.yml
@@ -1,6 +1,6 @@
 --- # Debugging
 -   hosts: '{{ myHosts }}'
-    remote_user: ansible
+    remote_user: centos
     become: yes
     become_method: sudo
     connection: ssh
@@ -12,5 +12,6 @@
     tasks:
     - shell: cat /etc/ansible/hosts
       register: hosts
+    - debug: var=hosts
     - debug: msg="Hosts File is empty"  
       when: hosts.stdout == ""
