--- a/AnsiblePlaybooks/0.basic.yml
+++ b/AnsiblePlaybooks/0.basic.yml
@@ -1,8 +1,8 @@
 --- #
 - hosts: centos
-  remote_user: ansible
+  remote_user: centos 
   become: yes
   become_method: sudo
   tasks:
   - name: Querying for Telnet Install
-    yum: pkg=telnet state=absent update_cache=true
+    yum: pkg=telnet state=present update_cache=true
