--- a/AnsiblePlaybooks/3.Conditional.yml
+++ b/AnsiblePlaybooks/3.Conditional.yml
@@ -1,6 +1,6 @@
 --- # Conditional Based PlayBook
--  hosts: centos
-   remote_user: ansible
+-  hosts: webserver
+   remote_user: centos
    become: yes
    become_method: sudo
    connection: ssh
