--- a/AnsiblePlaybooks/7.Apache.yml
+++ b/AnsiblePlaybooks/7.Apache.yml
@@ -1,6 +1,6 @@
----# Install http server and Deploy the Html File
+--- # Install http server and Deploy the Html File
 -  hosts: centos
-   remote_user: ansible
+   remote_user: centos
    become: yes
    tasks: 
       - name: Install Apache Server
