--- a/AnsiblePlaybooks/10.with_items.yml
+++ b/AnsiblePlaybooks/10.with_items.yml
@@ -5,7 +5,7 @@
    - name: Multiple Items - {{ item }}
      file:
             state: touch
-            path: /home/ansible/{{ item }}
+            path: /home/centos/{{ item }}
      with_items:
      - file_no_1
      - file_no_2
